refactor game finish function, add a end game dialog

--- a/index.html
+++ b/index.html
@@ -41,12 +41,7 @@
         Sorry, this example cannot be run because your browser does not support the &lt;canvas&gt; element
       </div>
     </canvas>
-<!--
-  moving instructions to start screen
-    <div id="instructions">
-      <b>LEFT/RIGHT</b> to move, <b>SPACE</b> to jump, collect gold and jump on monsters.
-    </div>
--->
+
 
   <div id="dialog" title="Tiny Platformer">
     <p>Collect all the gold and squash monsters to win!</p>
@@ -54,6 +49,12 @@
 	<p> press <b>SPACE</b> to jump.</p>
 	<p>press <b>P</b> to pause/resume the game </p>
   </div>
+
+  <div id="dialog2" title="Congratulation!!!">
+    <p><b>You have beat the game !!</b> </p>
+    <p><b>This is a EECE310 Project </b> </p>
+    <p><b>Thank you for playing</b> </p>
+  </div> 
 
   </div>
   <script src="fpsmeter.min.js"></script>
